--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/PJ-Duo/discord-scraper/issues"
   },
-  "homepage": "https://github.com/PJ-Duo/discord-scraper#readme"
+  "homepage": "https://github.com/PJ-Duo/discord-scraper#readme",
+  "dependencies": {
+    "discord.js": "^14.7.1",
+    "dotenv": "^16.0.3"
+  }
 }
